# rover2_ws

./: .main_rover_service.service.swp  headless_camera.service  main_rover_service.service  start_rover.sh
camera/camera/: obstacle_avoidance.py  track_and_follow.py  track_and_follow_with_obs_avoidance.py
camera/launch/: track_and_follow_all.launch.py
mecanum_control/: CMakeLists.txt  package.xml
mecanum_control/config/: joystick.yaml  twist_mux.yaml
mecanum_control/launch/: full_robot.launch.py  joy_stick.launch.py  launch_robot.launch.py
mecanum_control/src/: mecanum_node.cpp  serial_mecanum_node.cpp  serial_scanner.cpp
remote/remote/: controller_ready_pub.py  mode_controller copy.py  mode_controller.py
